# ndn-lighting

./: README
c/ColorBlast/: ColorBlast.pyo  RGBLamp.pyo
c/ColorBlaze1/: ColorBlast.py  fnmatch.pyo  ndnLightControl_1_bu.sh
c/ColorBlaze2/: ColorBlast.pyo  fnmatch.pyo  ndnLightControl.sh
c/cfgMgr/: cfgExample
c/keyLab/: ccn_signed_interest.c  cfgMgr.py  ndnSignedInterest.bak.c
c/lightData/: makefile  ndnData.c
c/lightInterest/: ndnInterst.c
c/signedData/: Makefile.bak  ccn_signed_interest.c  signed_interest.h  test_signed_interest.c
c/signedInterest/: ndnSignedInterest.c  ndnSignedInterest.preUn.bak.c  testSignedInterest
ccn_cross-compile_gumstix_overo/: ._blah.out  ._ccnrp  ._vantages-0.8.6b  blah.out  gnupg-1.4.10.tar.bz2
ccn_cross-compile_gumstix_overo/ccnrp/: CCNListener.cpp  CCNListener.h  CCNPeerMap.cpp  CCNPeerMap.h  CCNRegEntry.cpp  CCNRegEntry.h  CCNRegMsg.cpp  CCNRegMsg.h  Daemon.cpp  Daemon.h  Makefile  Makefile_client  Makefile_server  README  RPClient.cpp  RPClient.h  ccn_global.cpp  ccn_global.h  ccnrp.cpp  ccnrp_client.cpp  ccnrp_config.cpp  ccnrp_config.h  ccnrp_defs.h  dnskey_admin_ctx.h  dnskey_app.h  dnskey_consist_dao.h  dnskey_http_ctx.h  dnskey_mon_dao.h  dnskey_scraper_dao.h  dnskey_set_dao.h  dnskey_web_task.h  kill_ccnrp.sh  self.conf
ccn_cross-compile_gumstix_overo/gnupg-1.4.10/: Makefile.in  aclocal.m4  config.h.in  configure  gnupg.spec
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/: CHANGELOG  COMPILE  LICENSE  Makefile  Makefile-novant.in  Makefile.in  README  aclocal.m4  config.status  configure  configure.in
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/dns/: Makefile  Makefile.in  b64.lo  base64.lo  config.h  config.h.in  dns_a.cc  dns_a.h  dns_a.lo  dns_compression.cc  dns_compression.h  dns_compression.lo  dns_defs.h  dns_dnskey.cc  dns_dnskey.h  dns_dnskey.lo  dns_ds.cc  dns_ds.h  dns_ds.lo  dns_err.cc  dns_err.h  dns_err.lo  dns_factory.h  dns_header.cc  dns_header.h  dns_header.lo  dns_info.cc  dns_info.h  dns_info.lo  dns_mutex.cc  dns_mutex.h  dns_mutex.lo  dns_mutex_hdlr.cc  dns_mutex_hdlr.h  dns_mutex_hdlr.lo  dns_name.cc  dns_name.h  dns_name.lo  dns_ns.cc  dns_ns.h  (+40 more)
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/dns/.libs/: libvdns.la  libvdns.lai
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/doc/: dnsfunnel.1  dnskey-grab.1  vantaged.8  vantaged.conf.5  vantaged.conf.sample
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/scripts/: create-db.pl  vant-setup  vant-upgrade.pl  vant-upgrade.pl.in  vantaged.sh.linux
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/shttpd-1.42/src/: Makefile  compat_rtems.c  shttpd  shttpd.1  shttpd.c  shttpd.h
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/sql/ddl/: 10_dsync_create.sql  10_ps_create.sql  10_ps_update.sql  11_policy_create.sql  11_ps_update.sql
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/sql/dml/: 10_ps_config.sql  10_ps_namespace.sql  10_ps_scraper_type_ref.sql  10_ps_update.sql  11_ps_policy.sql  11_ps_scraper.sql
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/src/: Makefile  Makefile-full.in  Makefile-novant.in  b64.c  b64.h  base64.cc  base64.h  bind_ta_gen.cc  bind_ta_gen.h  config.h  config.h.in  dao_factory.cc  dao_factory.h  dnsfunnel.cc  dnskey-grab.cc  dnskey_admin_ctx.cc  dnskey_app.cc  dnskey_consist_dao.cc  dnskey_defs.h  dnskey_http_ctx.cc  dnskey_mon_dao.cc  dnskey_pcap_loader.cc  dnskey_pcap_loader.h  dnskey_poll_task.cc  dnskey_poll_task.h  dnskey_proc_dao.cc  dnskey_proc_dao.h  dnskey_scraper_dao.cc  dnskey_set_dao.cc  dnskey_web_task.cc  dsync_app.cc  dsync_app.h  dsync_ctx.cc  dsync_ctx.h  dsync_defs.h  dsync_dnskey_abstraction_task.cc  dsync_dnskey_abstraction_task.h  dsync_first_task.cc  dsync_first_task.h  dsync_init_task.cc  (+118 more)
ccn_cross-compile_gumstix_overo/vantages-0.8.6b/src/.libs/: dnsfunnel  dnskey-grab  vantaged
doc/: Pyccn_keylocator_wireFormat.txt  ccnx_lighting_xml.txt  gumstix_readme.txt
lights/: ArtNet.py  config.py  dmx_usb_out.py  lightDiscovery1.py
lights/ColorBlast/: ColorBlast.py  ControlSocket.py  fnmatch.pyo  iColorFlex.py  iColorFlex_orig.py
lights/ColorBlaze1/: ControlSocket.py  KinetSender.pyo
lights/ColorBlaze2/: KinetSenderV2.old.py  lightDiscovery.py
lights/ColorBlaze2_RGBAW/: ColorBlast.py  ControlSocket.py  KinetSender.py  KinetSender.pyo
lights/colorFlex/: KinetSender.py
mu-lighting/: .gitignore  CommandParameters.py  LightMessenger.py  README.md  RepoTlv.py  config.cfg  controller.py  musicPlayer.py  pyGetFile.py  pyPutFile.py  storage1.py  storage2.py
mu-lighting/music-file/: clear-o.txt  clear.txt  mozart-o.txt  mozart.txt  nocturne-o.txt  nocturne.txt  short-o.txt  short.txt  short1-o.txt  short1.txt
mu-lighting/music-file2/: daydream-o.txt  daydream.txt  happy or not-o.txt  happy or not.txt  qq-o.txt  qq.txt  short2-o.txt  short2.txt  sky-o.txt  sky.txt  yesterday-o.txt  yesterday.txt
mu-lighting/piCode/: fixture.py
ndn/: ndnLightData.c  ndnLightInterest.c
ndn/ColorBlast/: ControlSocket.py  KinetSenderV2.py  ndnLightControl.sh  ndnLightControl_1.sh  ndnLightControl_2.sh
ndn/cfgMgr/: cfgExample.c  cfgMgr.c  cfgMgr.h  cfgMgr.py  config.py
python/: PyCCN  README.txt  analyze_stats.py  cfgMgr  cm.pem  cm.py  cm_cfg.py  cm_preRepo.py  color.txt  control.profile  control.txt  controller.py  controller_cfg.py  database.py  namecryptotest.py  rainbow.py  rainbow_cfg.py  sequencer.cfg.py  sequencer.profile  sequencer.py  sequencer.txt  sequencer_cfg.py  sequencer_preInterest.py  sequencer_preobj.py  xpress.py  xpress_cfg.py
scripts/: autoRoute  autoRouteNAT  autoStartKinetTV1  autoStartLightingParc  autoStartLightingTV1  autoStopAllKinet  controlHelper.py  controlHelper_cfg.py  postNetwork.py  startSequencer.sh  webStartFader  webStartLightingTV1  webStopFader  webStopLightingTV1  webTurnOffAllLights
web/: analyze.py  autoEmail.sh  checkGmail.py  colorExpressor.py  colorExpressor_cfg.py  colorpicker.css  config.borges.py  control.html  control.py  current.html  image.html  image.py  picker.html  readme.txt  tv1_colorpicker.js  upload.html  upload.py
(+366 files in other folders)
